[package]
name = "vd"
version = "0.1.0"
authors = ["Matt Wright <mattwright3195@gmail.com>"]
edition = "2018"
description = "A short description of my package"
license = "MIT"


[dependencies]
serde = "1.0.130"
serde_cbor = "0.11.2"
lazy_static = "1.4.0"

[build-dependencies]
serde = { version = "1.0.130", features = ["derive"] }
csv = "1.1.6"
serde_cbor = "0.11.2"
